<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/round_background"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <TextView
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shader_program"/>
            <Spinner
                android:id="@+id/spinner_shader"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/layout_settings"
                    android:background="@drawable/round_background"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_reset_to_defaults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_to_defaults"/>
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/button_tap_to_set_the_wallpaper"
            android:tag="button_set_wallpaper"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_set_the_wallpaper"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">
            <Button
                android:id="@+id/button_buy_premium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_a_look_at_premium_version"/>
            <Button
                android:id="@+id/button_shader_live"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shader_live"
                style="@android:style/TextAppearance.DeviceDefault.Small"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/layout_info"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
